--- a/client/src/components/header/header.css
+++ b/client/src/components/header/header.css
@@ -2,3 +2,24 @@
     width :77px;
     background-color:transparent;
 }
+
+nav{
+    border-bottom: 1px solid rgb(194, 193, 193);
+}
+
+
+nav li a{
+    text-decoration: none;
+    color: black !important;
+    text-transform: uppercase;
+    font-weight: 500;
+}
+nav button a{
+    color: var(--main-color);
+}
+nav button :hover{
+    color : white !important;
+}
+nav .active{
+    color : var(--main-color) !important;
+}
