--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,7 @@
+
+:root{
+  --main-color : rgb(9, 210, 9);
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -6,8 +10,9 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.main-container{
+  height: 100vh;
+  padding:40px;
 }
+
+
