--- a/client/src/components/header/header.css
+++ b/client/src/components/header/header.css
@@ -23,3 +23,7 @@ nav button :hover{
 nav .active{
     color : var(--main-color) !important;
 }
+nav .login-btn{
+    width:100%;
+    height: 100%;
+}
