--- a/client/src/components/header/header.css
+++ b/client/src/components/header/header.css
@@ -24,6 +24,11 @@ nav .active{
     color : var(--main-color) !important;
 }
 nav .login-btn{
-    width:100%;
-    height: 100%;
+    
+    padding : 0;
+}
+.login-btn a{
+    /* padding : 20px; */
+     width:100%;
+    height: 100%; 
 }
