--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,4 +1,8 @@
-
+*{
+  margin: 0;
+  padding : 0;
+  box-sizing: border-box;
+}
 :root{
   --main-color : rgb(9, 210, 9);
 }
@@ -9,11 +13,13 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: rgb(221, 217, 217);
 }
 .main-container{
   min-height: 100vh;
-  padding:40px;
+  /* padding:40px; */
   display: flex;
+  flex-direction: column;
   justify-content: center;
 }
 footer{
@@ -26,4 +32,80 @@ footer{
   background-color: var(--main-color);
 }
 
+.slide{
+  background-color: rgb(156, 156, 156);
+  max-height: 500px;
+  width:100%;
+}
+.slide img{
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.txt-center{
+  width: 200px;
+  text-align: center;
+  margin: auto;
+}
+.flex-box{
+  margin : 30px 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  gap:2rem;
+  flex-wrap: wrap;
+  align-items: center;
+}
+.sub-container{
+  padding :30px;
+}
+
+/* card css */
+
+.card-img-top{width: 250px;
+  height: 250px;
+}
+.card-title{
+  text-transform: capitalize;
+}
+.pos-bot{
+  position: absolute;
+  bottom: 20px;
+  color:rgb(92, 179, 6)
+}
+.card-container{
+  position: relative;
+  width:250px;
+  height: 250px;
+  gap:1rem;
+  justify-content: stretch;
+  text-decoration: none;
+  color : black !important;
+}
+
+ .card-container:hover .hover-component{
+  display: block;
+}
+.card-container:hover{
+  cursor: pointer;
+}
+.hover-component{
+  padding :30px;
+  font-size: 0.8rem;
+  display: none;
+  color :white;
+  position : absolute;
+  top:0;
+  right: 0;
+  left:0;
+  bottom: 0;
+  background-color: var(--main-color);
+  
+} 
+.main-txt-color{
+  color: var(--main-color)
+}
+/* @media screen and() {
+  
+} */
 
