--- a/client/src/components/header/header.css
+++ b/client/src/components/header/header.css
@@ -23,12 +23,18 @@ nav button :hover{
 nav .active{
     color : var(--main-color) !important;
 }
-nav .login-btn{
-    
-    padding : 0;
-}
-.login-btn a{
-    /* padding : 20px; */
-     width:100%;
-    height: 100%; 
-}
+
+.login-btn{
+    height: 38px;
+     text-decoration: none;
+     /* vertical-align: middle; */
+     color:  var(--main-color);
+    border: 1px solid var(--main-color);
+    margin-right: 7px;
+    border-radius: 10px;
+    padding :5px 15px;
+  }
+ .login-btn:hover{
+    background-color: var(--main-color);
+    color : white !important;
+ } 
